fixing collapse jump

--- a/app/assets/stylesheets/style_guide/layouts/_home.sass
+++ b/app/assets/stylesheets/style_guide/layouts/_home.sass
@@ -28,8 +28,10 @@
     margin-left: -80px
     margin-right: -80px
     color: white
-
-  .row
+  .fix-collapse
+    padding: 35px 35px
+    overflow: hidden
+  //.row
     padding: 35px 35px
 
   #presentations
